planet printer complete

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>Solar System</title>
 </head>
 <body>
-  <button class="btn btn-warning">Hey, I'm a button</button>
+  <div class="container" id="planet-zone"></div>
   
 </body>
 </html>
