search bar added, no functionality yet

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,14 @@
   <title>Solar System</title>
 </head>
 <body>
+  <div class="container search">
+  <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">🔍</span>
+      </div>
+      <input type="text" class="form-control" placeholder="Search" aria-label="Username" aria-describedby="basic-addon1">
+    </div>
+  </div>
   <div class="container" id="planet-zone"></div>
   
 </body>
