click works, x does not

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,6 @@
     </div>
   </div>
   <div class="container" id="planet-zone"></div>
-  
+  <div class="container" id="full-planet"></div>  
 </body>
 </html>
