--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       <div class="input-group-prepend">
         <span class="input-group-text" id="basic-addon1">🔍</span>
       </div>
-      <input type="text" class="form-control" placeholder="Search" aria-label="Username" aria-describedby="basic-addon1">
+      <input id="searchBar" type="text" class="form-control" placeholder="Search" aria-label="Username" aria-describedby="basic-addon1">
     </div>
   </div>
   <div class="container" id="planet-zone"></div>
